--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-router-dom": "^5.1.5",
     "pdf-viewer-reactjs": "^2.0.6",
     "react": "^16.13.1",
+    "react-awesome-reveal": "^2.4.2",
     "react-dom": "^16.13.1",
     "react-event-timeline": "^1.6.3",
     "react-redux": "^7.2.0",
