--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "nodemon": "^2.0.4",
     "pdf-viewer-reactjs": "^2.0.6",
     "react": "^16.13.1",
     "react-awesome-reveal": "^2.4.2",
